# aisprint-keheilan

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  fly.toml  generate_narrative_log.py  generate_user_friendly_log.py  implementation_plan.md  model1_land.db  new_pipeline.txt  pyproject.toml  render.yaml  requirements.txt  user_friendly_flow.md
crop_agent/: models.py  pipeline.py  run.py  run_best_crop.py  run_integrated.py  state.py
crop_agent/clients/: llm.py  search.py  soil_weather.py
crop_agent/monitoring/: models.py  prompts.py
crop_agent/prompts/: templates.py
crop_agent/stages/: stage_0_discover.py  stage_2_parse.py  stage_3_plan.py  stage_4_5_search_extract.py  stage_6_reflect.py  stages_11_12_critique_output.py  stages_7_8_score.py  stages_9_10_score_scenarios.py
crop_agent/tests/: fixtures.py  test_end_to_end.py
scripts/: entrypoint.sh
